--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "chart.js": "^2.7.1",
-    "github": "^13.0.1",
+    "axios": "^0.17.1",
+    "date-fns": "^1.29.0",
     "react": "^16.2.0",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
