--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.4",
+    "apollo-client": "^2.1.0",
+    "apollo-link-context": "^1.0.3",
+    "apollo-link-http": "^1.3.2",
     "axios": "^0.17.1",
     "date-fns": "^1.29.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.6.1",
     "react": "^16.2.0",
-    "react-chartjs": "^0.8.0",
+    "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
