--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql-tag": "^2.6.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
