--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.4",
-    "apollo-client": "^2.1.0",
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.0",
     "apollo-link-context": "^1.0.3",
     "apollo-link-http": "^1.3.2",
     "axios": "^0.17.1",
@@ -15,6 +15,7 @@
     "react-apollo": "^2.0.4",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-scripts": "1.0.17"
   },
   "scripts": {
