--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.5",
-    "apollo-client": "^2.2.0",
+    "apollo-client": "^2.2.1",
     "apollo-link-context": "^1.0.3",
     "apollo-link-http": "^1.3.2",
     "axios": "^0.17.1",
@@ -16,7 +16,9 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
